Bug 420364 - Kontact window has wrong title
Summary: Kontact window has wrong title
Status: VERIFIED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-21 06:35 UTC by Fabian Vogt
Modified: 2020-04-24 08:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2020-04-21 06:35:08 UTC
The Summary page is selected, but it says "Mail - Kontact".

Found by openQA: https://openqa.opensuse.org/tests/1241206#step/kontact/17
Comment 1 David Faure 2020-04-23 23:00:45 UTC
I confirm, but I'm surprised that it's a regression (IOW I wonder how it ever worked).
Does openQA have the information of what was the last version where it worked?
(Qt5, KF5, kdepim -- I suspect the change was either in KF5 or in Qt5)

Excellent GUI regression system you guys have, in any case.
Comment 2 David Faure 2020-04-23 23:09:38 UTC
Oh, wait, I get it. The switch from KParts::ReadOnlyPart to KParts::Part made us lose the automatic caption handling that was happening in KParts::ReadOnlyPart::guiActivateEvent.

How unexpected ;)
Oh well, it's cleaner this way. I'll fix it.
Comment 3 David Faure 2020-04-23 23:13:22 UTC
Git commit a62c89751bff05c87ed6aaa868d51bb38ba8c7e8 by David Faure.
Committed on 23/04/2020 at 23:11.
Pushed by dfaure into branch 'master'.

Adjust caption handling after the switch from ReadOnlyPart to Part.

KParts::ReadOnlyPart::guiActivateEvent is no longer called, so nothing
clears the window title anymore. Just detect that the plugin didn't
touch it.

OpenQA rocks (as well as Fabian for submitting bug reports when OpenQA
detects a regression).

M  +4    -3    src/mainwindow.cpp

https://commits.kde.org/kontact/a62c89751bff05c87ed6aaa868d51bb38ba8c7e8
Comment 4 Fabian Vogt 2020-04-24 08:57:01 UTC
Confirmed fixed, thanks!

https://openqa.opensuse.org/tests/1244145#step/kontact/15