Adjust caption handling after the switch from ReadOnlyPart to Part.

KParts::ReadOnlyPart::guiActivateEvent is no longer called, so nothing
clears the window title anymore. Just detect that the plugin didn't
touch it.

OpenQA rocks (as well as Fabian for submitting bug reports when OpenQA
detects a regression).

BUG: 420364