src/mainwindow.cpp
@@ -656,13 +656,14 @@ void MainWindow::selectPlugin(KontactInterface::Plugin *plugin)
             newAction = plugin->newActions().at(0);
         }
 
+        const QString oldWindowTitle = windowTitle();
+
         createGUI(plugin->part());
         plugin->shortcutChanged();
 
-        // KParts's guiActivateEvent emptied the caption when leaving the old part,
-        // and only some parts (like kmail) set it in guiActivateEvent when being activated.
+        // Only some parts (like kmail) set a caption in guiActivateEvent when being activated.
         // For others, this is the default caption:
-        if (windowTitle().isEmpty()) {
+        if (windowTitle() == oldWindowTitle) {
             setCaption(i18nc("@title:window Plugin dependent window title",
                              "%1 - Kontact", plugin->title()));
         }
